<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="StatusInformationData" Id="{8d509c50-424d-4299-8753-315fe80d0c8b}">
    <Declaration><![CDATA[{library PUBLIC}
TYPE StatusInformationData :
STRUCT
	Progress:			INT:=0;					(* Progress on current RPC call 0-100 *)
	FunctionNumber:		INT:=0;					(* Curent RPC function number *)
	ReturnValue:		INT:=0;					(* Return value from previous RPC call *)
	Extra:				INT:=0;					(* Extra information *)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>