<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="ABBMoveJAbs" Id="{7ad6ab81-df20-4100-ab20-2fcbfd37469e}" SpecialFunc="None">
    <Declaration><![CDATA[{library PUBLIC}
(* Function to move a robot to an abs location *)
FUNCTION_BLOCK ABBMoveJAbs
VAR_INPUT
	En: 				BOOL:=FALSE;			(* Set to true to start *)
	X:					REAL:=0.0;				(* X position *)
	Y:					REAL:=0.0;				(* Y position *)
	Z:					REAL:=0.0;				(* Z position *)
	RX:					REAL:=0.0;				(* RX angle *)
	RY:					REAL:=0.0;				(* RY angle *)
	RZ:					REAL:=0.0;				(* RZ angle *)
END_VAR
VAR_OUTPUT
	Done: 				BOOL:=FALSE;			(* If true, the command is transmitted ok, to reset set En to false *)
	Executing:			BOOL:=FALSE;			(* True while the command in transmitted *)
	Waiting:			BOOL:=FALSE;			(* True if the command is queued to be transmitted *)
	Error: 				BOOL := FALSE;			(* True if an error occured *)
	Progress:			INT:=0;					(* Function progress *)
END_VAR
VAR_IN_OUT
	Data: 				CommunicationData;		(* Common data structure to connect this function block to a specific Communicator block *)
END_VAR
VAR
	FunctionType: 		FUNCTION_TYPE;
	FunctionNumber: 	INT;
	ParameterDW:	DWORD;
	ParameterB:		BYTE;
	Sequence:			INT:=0;

	fbRPC:				ASyncRPC;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[FunctionType:=FUNCTION_TYPE.FUNCTION_TYPE_ASYNC_RPC;
FunctionNumber:=ABB_ASYNC_ABS_MOVEJ_TO_POSE;
ParameterDW:=0;										(* No parameters *)
ParameterB:=0;

fbRPC(EN:=En, Data:=Data, FunctionType:=FunctionType,FunctionNumber:=FunctionNumber, ParameterDW:=ParameterDW, ParameterB:=ParameterB);

Done:=fbRPC.Done;
Executing:=fbRPC.Executing;
Waiting:=fbRPC.Waiting;
Error:=fbRPC.Error OR (fbRPC.Done AND fbRPC.ReturnValue<0);
Progress:=fbRPC.Progress;
]]></ST>
    </Implementation>
    <LineIds Name="ABBMoveJAbs">
      <LineId Id="40" Count="11" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>